# cs525

./: .gitignore  CMakeLists.txt  README.md
A2 Backup/: CMakeLists.txt  makefile  storage_mgr.h
Assignemt 1/: makefile  storage_mgr.c
Assignment 1/: CMakeLists.txt  README.txt  dberror.h  makefile  storage_mgr.c  storage_mgr.h  test_assign1_1.c
Assignment 2/: CMakeLists.txt  buffer_mgr.c  buffer_mgr.h  buffer_mgr_stat.c  dberror.h  freespace.c  freespace.h  hash_map.c  hash_map.h  linked_list.c  linked_list.h  linked_list_tests.c  makefile  replacement_strategy.c  replacement_strategy.h  test_assign2_1.c
Assignment 3/: buffer_mgr.c  buffer_mgr.h  dberror.h  linked_list.h  linked_list_tests.c  makefile
a1/: README.txt  dberror.h  makefile  storage_mgr.c  test_assign1_1.c
a2/: CMakeLists.txt  buffer_mgr.c  dberror.h  debug.h  test_assign2_1.c  test_assign2_2.c
a2_backup/: CMakeLists.txt  buffer_mgr.c  makefile
a3/: CMakeLists.txt  binfmt.c  binfmt.h  binfmt_test.c  buffer_mgr.c  dberror.h  dt.h  expr.h  hash_map.h  makefile  readme.txt  record_mgr.c  record_mgr.h  replacement_strategy.h  rm_binfmt.h  rm_macros.h  rm_page.c  rm_page.h  rm_serializer.c  storage.db  tables.c  tables.h  test_assign3_1.c  test_helper.h
a3/docs/: CS525 - A3 Diagrams.pptx
a4/: CMakeLists.txt  binfmt.c  binfmt.h  binfmt_test.c  btree.c  btree.h  btree_binfmt.c  btree_binfmt.h  btree_mgr.c  btree_mgr.h  buffer_mgr.c  buffer_mgr.h  dberror.h  debug.h  dt.h  freespace.c  hash_map.c  linked_list.c  makefile  readme.txt  record_mgr.c  record_mgr.h  replacement_strategy.c  rm_macros.h  rm_page.c  rm_page.h  storage_mgr.c  tables.c  tables.h  test_assign4_1.c
