cmake_minimum_required(VERSION 3.10)

add_executable(test_assign2_1
        "../a1/storage_mgr.c"
        buffer_mgr_stat.c
        dberror.c
        buffer_mgr.c
        test_assign2_1.c
        )

add_executable(test_assign2_2
        "../a1/storage_mgr.c"
        buffer_mgr_stat.c
        dberror.c
        buffer_mgr.c
        test_assign2_2.c
        )
